--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+     "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
     "preview": "vite preview",
     "build:css": "tailwindcss -i ./src/style.css -o ./dist/output.css --watch"
   },
