--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "buildCommand": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
-  "outputDirectory": "./",
-  "cleanUrls": true
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
