--- a/package.json
+++ b/package.json
@@ -6,15 +6,50 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:css": "tailwindcss -i ./index.css -o ./dist/output.css",
+    "watch:css": "tailwindcss -i ./index.css -o ./dist/output.css --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.2.2"
-  }
+  },
+  "dependencies": {
+    "baseline-browser-mapping": "^2.8.26",
+    "browserslist": "^4.28.0",
+    "caniuse-lite": "^1.0.30001754",
+    "convert-source-map": "^2.0.0",
+    "debug": "^4.4.3",
+    "electron-to-chromium": "^1.5.250",
+    "esbuild": "^0.25.12",
+    "escalade": "^3.2.0",
+    "fdir": "^6.5.0",
+    "fraction.js": "^5.3.4",
+    "gensync": "^1.0.0-beta.2",
+    "jiti": "^1.21.7",
+    "js-tokens": "^4.0.0",
+    "jsesc": "^3.1.0",
+    "json5": "^2.2.3",
+    "lru-cache": "^5.1.1",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.11",
+    "node-releases": "^2.0.27",
+    "normalize-range": "^0.1.2",
+    "picocolors": "^1.1.1",
+    "picomatch": "^4.0.3",
+    "postcss-value-parser": "^4.2.0",
+    "react-refresh": "^0.18.0",
+    "rollup": "^4.53.2",
+    "semver": "^6.3.1",
+    "source-map-js": "^1.2.1",
+    "tinyglobby": "^0.2.15",
+    "update-browserslist-db": "^1.1.4",
+    "yallist": "^3.1.1"
+  },
+  "keywords": []
 }
